--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montez&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body{
-    background-color: rgb(254, 254, 254);
+    background-color: rgb(218, 26, 53);
     font-family: "Montserrat";
-    color:red;
+    color:rgb(247, 241, 241);
 }
 
 h1{
@@ -14,14 +14,15 @@ h1{
 
 h5{
     color:black
+
 }
 
-div{
-    text-align: center;
-}
+
 nav{
-    font-family: 'Courier New', Courier, monospace;
-    background: rgb(255, 255, 255)
+    font-family: 'Courier New', 'Courier', 'monospace';
+    background: rgb(218, 26, 53);
+    text-align: center;
+    
 }
 li{
     display: inline-block;
@@ -30,11 +31,11 @@ li{
     
 }
 a{
-    color:rgb(0, 0, 0)
+    color:rgb(255, 255, 255)
 }
 
 li > a:hover{
-    background-color: red;
+    background-color: rgb(0, 0, 0);
 }
 
 .Foods:nth-child(even){
@@ -45,5 +46,36 @@ li > a:hover{
 img{
     max-width: 250px;
     max-height: 600px;
+}
+
+button[type="submit"]:hover{
+    background-color: red;
+}
+
+button[type="submit"]{
+    background-color: white;
+}
+
+button[type="reset"]:hover{
+    background-color: red;
+}
+
+button[type="reset"]{
+    background-color: white;
+}
+
+@media screen and (max-width: 600px){
+    nav{
+        flex-direction: column;
+    }
+
+    .project img{
+        width: 100%
+    }
+
+    #inputs{
+      size: 50px;  
+    }
+
 }
 
